# scratchpad

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  install.sh
.claude-plugin/: plugin.json
.claude-plugin/hooks/: hooks.json
.claude-plugin/skills/scratchpad/: SKILL.md
.claude-plugin/skills/scratchpad/references/: SETUP.md
.github/workflows/: ci.yml  release.yml
agentpad/: Cargo.toml
agentpad/src/: cli.rs  models.rs  storage.rs
agentpad/src/tui/: mod.rs  ui.rs
crates/agentpad/: Cargo.toml
crates/agentpad-relay/src/: db.rs  main.rs  models.rs
crates/agentpad/src/: main.rs
crates/agentpad/src/tui/: app.rs
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/skills/scratchpad/: SKILL.md
plugins/codex/scratchpad/: SKILL.md
relay/: Cargo.toml
relay/src/: handlers.rs
scratchpad/: Cargo.toml
scratchpad/src/: cli.rs  config.rs  hook.rs  main.rs  markdown.rs  models.rs  names.rs  open.rs  storage.rs
scratchpad/src/tui/: app.rs  mod.rs  ui.rs
server/: Cargo.toml
server/src/: db.rs  handlers.rs  main.rs
skills/scratchpad/references/: SETUP.md
skills/scratchpad/templates/: rule.md
