[package]
name = "agentpad-relay"
version = "0.1.0"
edition = "2024"
description = "Relay server for Agentpad sync"
license = "MIT"

[[bin]]
name = "ap-relay"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
futures = "0.3.31"
