[package]
name = "scratchpad"
version = "0.1.0"
edition = "2024"
description = "Minimal TUI for organizing agent work sessions"
license = "MIT"

[[bin]]
name = "sp"
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
ratatui-core = "0.1.0"
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
clap = { version = "4.5.54", features = ["derive"] }
directories = "6.0.0"
chrono = { version = "0.4.43", features = ["serde"] }
anyhow = "1.0.100"
ansi-to-tui = "8.0.1"
rand = "0.9"
which = "7.0"
